# gpui-component

./: .theme-schema.json  AGENTS.md  Cargo.toml  README.md
.claude/skills/generate-story/: SKILL.md
.claude/skills/gpui-action/: SKILL.md
.claude/skills/gpui-async/: SKILL.md
.claude/skills/gpui-context/: SKILL.md
.claude/skills/gpui-element/: SKILL.md
.claude/skills/gpui-entity/: SKILL.md
.claude/skills/gpui-event/: SKILL.md
.claude/skills/gpui-focus-handle/: SKILL.md
.claude/skills/gpui-global/: SKILL.md
.claude/skills/gpui-layout-and-style/: SKILL.md
.claude/skills/new-component/: SKILL.md
crates/assets/src/: lib.rs
crates/macros/src/: lib.rs
crates/story/: Cargo.toml
crates/story/examples/: agentx.rs  brush.rs  diff-code.rs  diff.rs  dock.rs  editor.rs  git_history.rs  html.rs  knowledge_hub.rs  large-text.rs  markdown.rs  multi_file_diff.rs  notebook_lm.rs  presentation_preview.rs  skills_page.rs  stream_markdown.rs  tiles.rs  workspace_sidebar.rs
crates/story/src/: lib.rs  main.rs  title_bar.rs  workspace_sidebar_story.rs
crates/ui/: Cargo.toml
crates/ui/src/: collapsible_list.rs  color_picker.rs  dialog.rs  element_ext.rs  geometry.rs  global_state.rs  group_box.rs  icon.rs  kbd.rs  lib.rs  popover.rs  radio.rs  root.rs  select.rs  sheet.rs  styled.rs  tree.rs  window_border.rs  window_ext.rs
docs/docs/: assets.md  getting-started.md
docs/docs/components/: editor.md  focus-trap.md
examples/app_assets/: Cargo.toml  README.md
examples/app_assets/src/: main.rs
examples/chat_session/: Cargo.toml  build.rs
examples/chat_session/src/: bridge.rs  main.rs  session.rs  types.rs  utils.rs
examples/chat_session/src/ui/: builders.rs  components.rs  mod.rs
examples/chat_session/src/view/: actions.rs  events.rs  measure.rs  mod.rs  render.rs  state.rs
examples/dialog_overlay/: Cargo.toml
examples/dialog_overlay/src/: main.rs
examples/focus_trap/: Cargo.toml
examples/hello_world/: Cargo.toml
examples/input/: Cargo.toml
examples/mixed_virtual_list/: Cargo.toml
examples/mixed_virtual_list/src/: main.rs
examples/system_monitor/: Cargo.toml
examples/webview/: Cargo.toml
examples/window_title/: Cargo.toml
themes/: adventure.json  alduin.json  catppuccin.json  harper.json  hybrid.json  jellybeans.json  macos-classic.json  mellifluous.json  molokai.json  tokyonight.json
(+93 files in other folders)
