[package]
name = "chat_session"
description = "Chat session window with collapsible thoughts, tool calls, files, and streaming markdown."
version = "0.5.0"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
smol.workspace = true

[lints]
workspace = true
