[package]
name = "mixed_virtual_list"
description = "A virtual list example with mixed content types including Collapsible, TextView, Image, and Markdown."
version = "0.5.0"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true }

[lints]
workspace = true
